@@ -5,3 +5,5 @@ picture book_background 104 63 785 579 bouquin
 label_drawextinfo book_text 180 100 640 420 font_metaurl14 DARK_GRAY
 button book_close 690 510 135 55 button_small_active button_small_pushed command_book_close font_metaurl14 DARK_GRAY 20 34 Close
 commandlist_add command_book_close null DIALOG_CLOSE book
+
+set_default book_close
