@@ -377,7 +377,6 @@ public class JXCWindow extends JFrame implements KeyListener, MouseInputListener
             {
                 jxcWindowRenderer.setHideInput(false);
             }
-            dialog.activateFirstTextArea(false);
         }
     }
 
