@@ -1,5 +1,9 @@
 2007-12-07  Andreas Kirschbaum
 
+	* Make ENTER and SPACE select the default action in dialogs. For
+	books "close dialog", in quit dialog "disconnect", in metaserver
+	and start dialogs "connect".
+
 	* Generalize spellbelt into shortcuts: a shortcut can hold either
 	a spell or a command.
 
